--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                     <div class="service-card">
                         <div class="body">
                             <img src="assets/images/figma.png" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
-                            <a href="illustrator_main.html">
+                            <a href="figma.html">
                                 <h6 class="title">FIGMA</h6>
                             </a>
 
