--- a/figma.html
+++ b/figma.html
@@ -70,7 +70,7 @@
             <div class="service-card">
                 <div class="body">
                     <img src="assets/images/INDIGO.png" class="icon">
-                    <a href="">
+                    <a href="https://www.figma.com/design/8QLBHgsyoNk2METtPgLMDS/Untitled?node-id=0-1&t=hT0vkgqu1QyjMtS9-1">
                         <h6 class="title">INDIGO</h6>
                     </a>
 
